--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
                             <includes>
                                 <include>**/When*.java</include>
                                 <include>**/*Test.java</include>
+                                <include>**/Test*.java</include>
+                                <include>**/*Testcase.java</include>
                             </includes>
                             <excludes>
                                 <exclude>%regex[.*integration.*]</exclude>
