--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
                             <includes>
                                 <include>**/When*.java</include>
                                 <include>**/*Test.java</include>
+                                <include>**/*Tests.java</include>
                                 <include>**/Test*.java</include>
                                 <include>**/*Testcase.java</include>
                             </includes>
