--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,7 @@ sonar.projectName=Simple Java project analyzed with the SonarQube Runner
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=./gameoflife-web/src
-sonar.sources=./gameoflife-build/src
-sonar.sources=./gameoflife-acceptance-tests/src
-sonar.sources=./gameoflife-core/src
+sonar.sources=./gameoflife-web/src, ./gameoflife-build/src, ./gameoflife-acceptance-tests/src, ./gameoflife-core/src
 
 # Language
 sonar.language=java
